--- a/gb/25/10/16/n14617737.md
+++ b/gb/25/10/16/n14617737.md
@@ -37,40 +37,42 @@
 <p>因此，从公民权利角度，它成为“人民的压迫者”，所以说：中共是中国人民的敌人。</p>
 <p>作者：张科<br />
 日期：2025年10月10日</p>
+<p><em>作者介绍：张科是一位曾在中国创办并经营企业的创业者，因拒绝参与体制腐败，企业被迫关停。她毅然离开中国，移居加拿大。如今，她专注于老年关怀与AI智能陪伴项目的研发，致力于让科技服务真正的人性与尊严。经历磨难后，她选择用行动重建信任与希望，为社会带来温度与力量。</em></p>
+<p>责任编辑：文风</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607872.md#1">中共篡政76年 经济寒冬下民怨沸腾</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14609015.md#1">女星孙琳为于朦胧发声 发表“藏头诗”被秒删</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611288.md#1">英慧：“十一”国殇日的思考</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615150.md#1">九天剑：中共党媒连抛空文 难掩经济末日之像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617715.md#1">国外培训医生在安省实习 须读过本地高中</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617704.md#1">联邦预算案或将削减50%城市住房开发费</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617677.md#1">福特一把拦下小偷 还说要揍他屁股</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617102.md#1">汽车巨头将生产线搬去美国 福特：他们承诺不关厂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617081.md#1">62岁无家者市政广场被杀 警寻找死者亲属</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617062.md#1">斯特兰蒂斯吉普SUV电动车生产回流美国 加拿大失望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652166.md#1">未申报逾2300车辆 安省出口商面3690万元罚金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652113.md#1">中共是中国人民的敌人（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651399.md#1">过度拥挤＋毒品泛滥 安省监狱陷入恶性循环</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652072.md#1">大多区油价本周将降至今年4月以来新低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652067.md#1">多伦多联合车站现人脸识别广告牌 隐私专员调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651370.md#1">防托儿所悲剧重演 安省斥2,000万加装防撞护栏</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/8/n14611777.md#1">为何“终其一生，不过苟且二字”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/27/n14603916.md#1">六十年积累功德 徐某登仙界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617631.md#1">【直播】IMF总裁就全球经济举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617067.md#1">【佳音时刻】与保密局打擂台？胡锡进抱怨管制严</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617159.md#1">【直播】川普总统在白宫举办晚宴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615717.md#1">汪林朋为何自杀？ 知情人：留置期间惨遭折磨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616083.md#1">中共四中全会前 又一名王岐山旧部落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616081.md#1">从楼市衰退到全面通缩 中国经济警讯频传</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615714.md#1">港星蒋荣发曝与成龙反目内幕 公司纠纷引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616334.md#1">李亚鹏转战商圈积欠巨债 与海哈金喜官宣离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615651.md#1">王祖蓝一原因怕自己明年大限将至 活不过46岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617091.md#1">黎明开唱妻女罕现身 发现被偷拍火速离场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616452.md#1">大陆女星白鹿自曝磕碎牙片 搞笑喊粉丝帮个忙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609546.md#1">拌酱让蔬菜更美味 大厨教你做“凉拌酱汁”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615224.md#1">为什么你应该在花园里撒上一些黑胡椒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615822.md#1">Z世代挑战坐着发呆 摆脱电子产品干扰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616755.md#1">小狗疼痛时的几个迹象 很容易被人们忽视</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616625.md#1">你想要快乐吗？ 专家：从保持善良开始</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651357.md#1">【音乐】《芬兰颂》作品第26号｜2023神韵交响乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646630.md#1">简单五步骤 自己也能迅速装上被套</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/16/n14617737.htm">为什么说中共是中国人民的敌人（一）</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617737.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
